tdf#149707 sw_redlinenum DOCX export: fix tracked moving of list items

Change tracking of the paragraph mark of moved list items
wasn't exported. I.e. moveFrom and moveTo paragraphs
are exported as old paragraphs with new content, e.g. accepting
a removed list item and rejecting an inserted list item leave
empty list items instead removing the list items completely in MSO.

Note: in Writer the import of the old (incomplete) DOCX export
worked before this commit, too.

Change-Id: I9367d880af16aab376178ab6d226b3013688997c