sw/source/filter/ww8/docxattributeoutput.cxx
@@ -2973,6 +2973,8 @@ void DocxAttributeOutput::InitCollectedRunProperties()
         FSNS( XML_w, XML_rPrChange ),
         FSNS( XML_w, XML_del ),
         FSNS( XML_w, XML_ins ),
+        FSNS( XML_w, XML_moveFrom ),
+        FSNS( XML_w, XML_moveTo ),
         FSNS( XML_w14, XML_glow ),
         FSNS( XML_w14, XML_shadow ),
         FSNS( XML_w14, XML_reflection ),
